--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,17 @@ body {
     border: 1px solid #222;
     border-radius: 8px;
     padding: 1rem;
+    display: grid;
+    flex-direction: column;
+    padding: 20px;
+    order: 1;
   }
   
   .emoji h2 {
     margin: 0;
     border-bottom: 2px solid #ccc;
+    display: flex;
+    order: 4;
   }
   
   .emoji a {
@@ -20,35 +26,27 @@ body {
     color: white;
     padding: 1rem;
     border-radius: 8px;
+    display: flex;
+    align-items: flex-end;
+    order: 4;
   }
   
   .icon {
     font-size: 4rem;
+    display: flex;
+    justify-content: center ;
+    order: 3;
   }
 
   .emojis{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px; 
+    gap: 20px;
   }
 
-  .emoji{
-    display: grid;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    border-radius: 5px;
+  p{
+    order: 4;
   }
 
-  .icon{
-    display: flex;
-    justify-content: center;
-    
-  }
-
-  .emoji a{
-    display: flex;
-    align-items: flex-end;
-  }
 
   
